--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main></main>
-    <script src="main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main></main>
+  <template class="superhero">
+    <h2 class="name">Bruce Wayne</h2>
+    <h3> Good: <span class="good">true</span></h3>
+    <h3>Power:
+      <span class="power">money, strength, wings, jawline, immortal, genius, karate</span>
+    </h3>
+    <h3>Height: <span class="height">188</span></h3>
+    <h3>Birth: <span class="day">27</span> . <span class="month">5</span> . <span class="year">1939</span> </h3>
+    <img src="https://static1.funidelia.com/474152-f4_large/batman-kostume.jpg" alt="superhero image" class="image">
+
+  </template>
+  <script src="main.js"></script>
+</body>
+
 </html>
